<resources>
    <string name="app_name">NimbleSchedule TimeClock</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_timeclockid">Clock ID</string>
    <string name="label_startat">Started</string>
    <string name="label_isactive">Active</string>
    <string name="btn_clockin">Clock In</string>
    <string name="btn_clockout">Clock Out</string>
    <string name="btn_refresh">Refresh</string>
    <string name="label_error">Oops! There was an error:</string>
    <string name="label_clockedin">Clocked in</string>
    <string name="label_clockedout">Clocked out</string>
    <string name="label_endat">Finish time</string>
    <string name="label_diff">Time logged</string>
</resources>
